--- a/app/src/content/jcr_root/apps/dx/config-manager/common/clientlibs/react/src/less/app.less
+++ b/app/src/content/jcr_root/apps/dx/config-manager/common/clientlibs/react/src/less/app.less
@@ -23,7 +23,7 @@
 
     &.dx-ActionBar--fixed {
         display: none;
-        z-index: 100000;
+        z-index: 10010;
         position: fixed;
         top: 0;
         background-color: #FFF;
@@ -77,4 +77,8 @@
 
 .spectrum-Popover {
     min-width: 150px;
+}
+
+.spectrum-Underlay.is-open {
+    z-index: 10010;
 }
